# solana_aggregator

./: Cargo.toml  README.md  config.toml  transaction_details.json
src/: main.rs  types.rs
src/aggregator/: mod.rs  processor.rs  retrieval.rs
src/db/: mod.rs
src/server/: mod.rs
src/tests/: aggregator.rs  api.rs  mod.rs
