[package]
name = "solana_data_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
solana-client = "2.0.1"
solana-program = "2.0.1"
solana-transaction-status = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
log = "0.4"
env_logger = "0.9"
axum = "0.5"
rusqlite = "0.25.3"

[dev-dependencies]
tower = "0.4.13"
hyper = "0.14.29"
